--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             </td>
             <td> 
                 <h1>Иванников Сергей</h1>
-                <p><em>Я начинающий фронтенд разработчик из Москвы</em></p>
+                <p><em>Я начинающий frontend разработчик из Москвы</em></p>
+                <p>Цель - устроиться на позицию junior до конца 2023г.</p>
             </td>
         </tr>
     </table>
@@ -30,10 +31,10 @@
 
     <h2>Мои хобби</h2>
     <ol>
-        <li>Программирование</li>
-        <li>Путешествия</li>
-        <li>Автомобили</li>
         <li>Спорт</li> 
+        <li>Автомобили</li>
+        <li>Путешествия</li>
+        <li>Программирование</li>
     </ol>
 
     <hr>
@@ -49,19 +50,14 @@
         </thead>
         <tbody>
             <tr>
-                <td>Шиномонтаж №1</td>
-                <td>Шиномонтажник</td>
-                <td>2015 - 2018</td> 
-            </tr>
-            <tr>
                 <td>AutoSave Detailing</td>
                 <td>Генеральный директор</td>
-                <td>2018 - 2021</td>          
+                <td>2018 - 2020</td>          
             </tr>
             <tr>
-                <td>AutoSale</td>
+                <td>Auto.ru/Avito.ru</td>
                 <td>Специалист по продажам</td>
-                <td>2021 - н.в.</td>
+                <td>2020 - н.в.</td>
             </tr>
         </tbody>
         <tfoot></tfoot>
@@ -69,7 +65,7 @@
 
     <hr>
 
-    <h2>Курсы которые Я прошел на YouTube</h2>
+    <h2>Пройденные курсы</h2>
     <a href="youtube.html" target="_blank">Посмотреть список</a>
 
     <hr>
@@ -106,6 +102,6 @@
             </tr>
         </table>
     </form>
-
+    
 </body>
 </html>
