--- a/youtube.html
+++ b/youtube.html
@@ -9,6 +9,9 @@
         <li>
             <a href="https://www.youtube.com/watch?v=DOEtVdkKwcU" target="_blank">HTML для Начинающих - Практический Курс [2021]</a>
         </li>
+        <li>
+            <a href="https://www.youtube.com/watch?v=SpCUuyZZTp8" target="_blank">CSS для Начинающих - Практический Курс [2021]</a>
+        </li>
     </ul>
 </body>
 </html>
